--- a/CarsInTheWay/appsettings.Development.json
+++ b/CarsInTheWay/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-7Q2P3DT;Initial Catalog=CarsInTheWay;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+
   }
 }
