Agregue espacio para connection string de manu

--- a/CarsInTheWay/appsettings.Development.json
+++ b/CarsInTheWay/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-7Q2P3DT;Initial Catalog=CarsInTheWay;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
-
+    "DefaultConnection": "Data Source=DESKTOP-7Q2P3DT;Initial Catalog=CarsInTheWay;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "ManuelConnection": "Data Source=DESKTOP-7Q2P3DT;Initial Catalog=CarsInTheWay;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
